--- a/frontend/src/app/static/static.component.scss
+++ b/frontend/src/app/static/static.component.scss
@@ -1,12 +1,9 @@
-nb-layout-column {
+.layout .layout-container .content .columns {
   padding: 0 !important;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  color: white !important;
-  line-height: 0;
-}
 
-body {
-  color: white !important;
+
+nb-layout-column {
+  padding: 0 !important;
 }
